<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_balance">Balance</string>
    <string name="account_name_equity">Equity</string>
    <string name="account_name_opening_balances">Opening Balances</string>
    <string name="acessibility_recurrence_choose_end_date_description">change end date</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_ok_delete">Delete</string>
    <string name="app_minor_version">4</string>
    <string name="app_name">GnuCash</string>
    <string name="app_version_name">2.4.0</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="asb_switch_off">OFF</string>
    <string name="asb_switch_on">ON</string>
    <string name="book_default_name">Book %1$d</string>
    <string name="description_add_transaction_icon">Add a new transaction to an account</string>
    <string name="description_view_account_icon">View account details</string>
    <string name="digit_eight">8</string>
    <string name="digit_eight_text">TUV</string>
    <string name="digit_five">5</string>
    <string name="digit_five_text">JKL</string>
    <string name="digit_four">4</string>
    <string name="digit_four_text">GHI</string>
    <string name="digit_nine">9</string>
    <string name="digit_nine_text">WXYZ</string>
    <string name="digit_one">1</string>
    <string name="digit_one_text">​</string>
    <string name="digit_seven">7</string>
    <string name="digit_seven_text">PQRS</string>
    <string name="digit_six">6</string>
    <string name="digit_six_text">MNO</string>
    <string name="digit_three">3</string>
    <string name="digit_three_text">DEF</string>
    <string name="digit_two">2</string>
    <string name="digit_two_text">ABC</string>
    <string name="digit_zero">0</string>
    <string name="digit_zero_text">+</string>
    <string name="header_about_gnucash">About</string>
    <string name="header_account_settings">Accounts</string>
    <string name="header_backup_and_export_settings">Backup &amp; export</string>
    <string name="header_general_settings">General</string>
    <string name="header_transaction_settings">Transactions</string>
    <string name="hint_delete_after_export">All exported transactions will be deleted when exporting is completed</string>
    <string name="hint_export_choice">By default, only new transactions since last export will be exported. Check this option to export all transactions</string>
    <string name="key_about_gnucash">about_gnucash</string>
    <string name="key_backup_location">backup_location</string>
    <string name="key_create_backup">create_backup</string>
    <string name="key_create_default_accounts">create_default_accounts</string>
    <string name="key_default_currency">default_currency</string>
    <string name="key_default_export_email">export_email_target</string>
    <string name="key_default_export_format">default_export_format</string>
    <string name="key_default_transaction_type">default_transaction_type</string>
    <string name="key_delete_all_accounts">delete_all_accounts</string>
    <string name="key_delete_all_transactions">delete_all_transactions</string>
    <string name="key_delete_transactions_after_export">delete_transactions_after_export</string>
    <string name="key_dropbox_sync">dropbox_sync</string>
    <string name="key_enable_crashlytics">enable_crashlytics</string>
    <string name="key_export_accounts_csv">export_accounts_csv_key</string>
    <string name="key_export_all_transactions">export_all_transactions</string>
    <string name="key_import_accounts">import_gnucash_accounts</string>
    <string name="key_license">app_license</string>
    <string name="key_owncloud_sync">owncloud_sync</string>
    <string name="key_prefs_header_general">prefs_header_general</string>
    <string name="key_restore_backup">restore_backup</string>
    <string name="key_save_opening_balances">save_opening_balances</string>
    <string name="key_use_compact_list">use_compact_list</string>
    <string name="key_use_double_entry">use_double_entry</string>
    <string name="key_xml_ofx_header">xml_ofx_header</string>
    <string name="label_account_name">Account name</string>
    <string name="label_passcode">Enter Passcode</string>
    <string name="label_recommend_app">Recommend in Play Store</string>
    <string name="menu_group_smaller_slices">Group Smaller Slices</string>
    <string name="menu_order_by_size">Order by size</string>
    <string name="menu_toggle_average_lines">Show average lines</string>
    <string name="menu_toggle_labels">Show labels</string>
    <string name="menu_toggle_legend">Show legend</string>
    <string name="menu_toggle_percentage_mode">Show percentage</string>
    <string name="msg_enable_crashlytics">Automatically send information about app malfunction to the developers.</string>
    <string name="nav_menu_export">Export…</string>
    <string name="nav_menu_favorites">Favorites</string>
    <string name="nav_menu_help">Help &amp; Feedback</string>
    <string name="nav_menu_open">Open…</string>
    <string name="nav_menu_reports">Reports</string>
    <string name="nav_menu_scheduled_actions">Scheduled Actions</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="summary_create_backup_pref">Create a backup of the active book</string>
    <string name="summary_create_default_accounts">Creates default GnuCash commonly-used account structure</string>
    <string name="summary_default_currency">Default currency to assign to new accounts</string>
    <string name="summary_default_export_email">The default email address to send exports to. You can still change this when you export.</string>
    <string name="summary_default_export_format">File format to use by default when exporting transactions</string>
    <string name="summary_default_transaction_type">The type of transaction to use by default, CREDIT or DEBIT</string>
    <string name="summary_delete_all_accounts">Delete all accounts in the database. All transactions will be deleted as well.</string>
    <string name="summary_delete_all_transactions">All transactions in all accounts will be deleted!</string>
    <string name="summary_dropbox_sync">Enable exporting to DropBox</string>
    <string name="summary_export_accounts_csv">Export all accounts (without transactions) to CSV</string>
    <string name="summary_google_plus">Share ideas, discuss changes or report problems</string>
    <string name="summary_import_accounts">Import account structure from GnuCash XML</string>
    <string name="summary_licence_details">Apache License v2.0. Click for details</string>
    <string name="summary_owncloud_sync">Enable exporting to ownCloud</string>
    <string name="summary_restore_backup_pref">Restore most recent backup of active book</string>
    <string name="summary_save_opening_balances">Enable to save the current account balance (before deleting transactions) as new opening balance after deleting transactions</string>
    <string name="summary_select_backup_file">Select a file for automatic backups</string>
    <string name="summary_translate_gnucash">Translate or proof-read on CrowdIn</string>
    <string name="summary_use_compact_list">Enable to always use compact view for transactions list</string>
    <string name="summary_use_double_entry">All transactions will be a transfer from one account to another</string>
    <string name="summary_xml_ofx_header">Enable this option when exporting to third-party application other than GnuCash for desktop</string>
    <string name="title_about_gnucash">About GnuCash</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_always_delete_exported_transactions">Delete exported transactions</string>
    <string name="title_backup_preference_category">Backup</string>
    <string name="title_choose_currency">Choose default currency</string>
    <string name="title_create_backup_pref">Create Backup</string>
    <string name="title_create_default_accounts">Create default accounts</string>
    <string name="title_default_currency">Default currency</string>
    <string name="title_default_export_email">Default export email</string>
    <string name="title_default_export_format">Default Export Format</string>
    <string name="title_default_transaction_type">Default Transaction Type</string>
    <string name="title_delete_all_accounts">Delete all accounts</string>
    <string name="title_delete_all_transactions">Delete all transactions</string>
    <string name="title_dropbox_sync_preference">Enable DropBox</string>
    <string name="title_enable_crashlytics">Enable Crash Logging</string>
    <string name="title_export_accounts_csv">Export as CSV</string>
    <string name="title_export_all_transactions">Export all transactions</string>
    <string name="title_export_preference_category">Export</string>
    <string name="title_google_plus_community">Google+ Community</string>
    <string name="title_import_accounts">Import GnuCash XML</string>
    <string name="title_license">License</string>
    <string name="title_manage_books">Manage Books</string>
    <string name="title_owncloud_sync_preference">Enable ownCloud</string>
    <string name="title_restore_backup">Restore Backup…</string>
    <string name="title_save_opening_balances">Save account opening balances</string>
    <string name="title_section_preferences">Preferences</string>
    <string name="title_select_backup_file">Select backup file</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_translate_gnucash">Translate GnuCash</string>
    <string name="title_use_compact_list">Enable compact view</string>
    <string name="title_use_double_entry">Activate Double Entry</string>
    <string name="title_xml_ofx_header">Use XML OFX header</string>
</resources>