<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:entries="@array/key_currency_codes" android:title="@string/title_default_currency" android:key="@string/key_default_currency" android:summary="@string/summary_default_currency" android:dialogTitle="@string/title_choose_currency" android:entryValues="@array/key_currency_codes" />
    <Preference android:title="@string/title_create_default_accounts" android:key="@string/key_create_default_accounts" android:summary="@string/summary_create_default_accounts" />
    <Preference android:title="@string/title_import_accounts" android:key="@string/key_import_accounts" android:summary="@string/summary_import_accounts" />
    <Preference android:title="@string/title_export_accounts_csv" android:key="@string/key_export_accounts_csv" android:summary="@string/summary_export_accounts_csv" />
    <Preference android:title="@string/title_delete_all_accounts" android:key="@string/key_delete_all_accounts" android:summary="@string/summary_delete_all_accounts" />
</PreferenceScreen>