<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:entries="@array/transaction_types" android:title="@string/title_default_transaction_type" android:key="@string/key_default_transaction_type" android:summary="@string/summary_default_transaction_type" android:entryValues="@array/key_transaction_type_values" />
    <android.support.v7.preference.SwitchPreferenceCompat android:title="@string/title_use_double_entry" android:key="@string/key_use_double_entry" android:summary="@string/summary_use_double_entry" android:defaultValue="true" />
    <android.support.v7.preference.SwitchPreferenceCompat android:title="@string/title_use_compact_list" android:key="@string/key_use_compact_list" android:summary="@string/summary_use_compact_list" android:dependency="@string/key_use_double_entry" />
    <android.support.v7.preference.SwitchPreferenceCompat android:title="@string/title_save_opening_balances" android:key="@string/key_save_opening_balances" android:summary="@string/summary_save_opening_balances" android:defaultValue="false" />
    <Preference android:title="@string/title_delete_all_transactions" android:key="@string/key_delete_all_transactions" android:summary="@string/summary_delete_all_transactions" />
</PreferenceScreen>