<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:title="@string/title_about_gnucash" android:key="@string/key_about_gnucash" android:summary="@string/app_version_name" />
    <Preference android:title="@string/title_google_plus_community" android:summary="@string/summary_google_plus">
        <intent android:action="android.intent.action.VIEW" android:data="https://plus.google.com/communities/104728406764752407046" />
    </Preference>
    <Preference android:title="@string/title_translate_gnucash" android:summary="@string/summary_translate_gnucash">
        <intent android:action="android.intent.action.VIEW" android:data="https://crowdin.com/project/gnucash-android" />
    </Preference>
    <Preference android:title="@string/title_license" android:key="@string/key_license" android:summary="@string/summary_licence_details">
        <intent android:action="android.intent.action.VIEW" android:data="http://www.apache.org/licenses/LICENSE-2.0.html" />
    </Preference>
    <android.support.v7.preference.SwitchPreferenceCompat android:title="@string/title_enable_crashlytics" android:key="@string/key_enable_crashlytics" android:summary="@string/msg_enable_crashlytics" />
</PreferenceScreen>