<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_folder_open_black_24dp" android:id="@id/nav_item_open" android:title="@string/nav_menu_open" />
    <item android:id="@id/nav_section_accounts" android:title="@string/title_accounts">
        <menu>
            <item android:icon="@drawable/ic_star_black_24dp" android:id="@id/nav_item_favorites" android:title="@string/nav_menu_favorites" />
            <item android:icon="@drawable/ic_equalizer_black_24dp" android:id="@id/nav_item_reports" android:title="@string/nav_menu_reports" />
        </menu>
    </item>
    <item android:id="@id/nav_section_transactions" android:title="@string/title_transactions">
        <menu>
            <item android:icon="@drawable/ic_settings_backup_restore_black_24dp" android:id="@id/nav_item_scheduled_actions" android:title="@string/nav_menu_scheduled_actions" />
            <item android:icon="@drawable/ic_backup_black_24dp" android:id="@id/nav_item_export" android:title="@string/nav_menu_export" />
        </menu>
    </item>
    <item android:id="@id/nav_section_settings" android:title="@string/title_section_preferences">
        <menu>
            <item android:icon="@drawable/ic_settings_black_24dp" android:id="@id/nav_item_settings" android:title="@string/nav_menu_settings" />
            <item android:icon="@drawable/ic_help_black_24dp" android:id="@id/nav_item_help" android:title="@string/nav_menu_help" />
        </menu>
    </item>
</menu>