<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/menu_order_by_size" android:title="@string/menu_order_by_size" android:checkable="true" app:showAsAction="never" />
    <item android:id="@id/menu_toggle_legend" android:checked="true" android:title="@string/menu_toggle_legend" android:checkable="true" app:showAsAction="never" />
    <item android:id="@id/menu_toggle_labels" android:checked="true" android:title="@string/menu_toggle_labels" android:checkable="true" app:showAsAction="never" />
    <item android:id="@id/menu_percentage_mode" android:title="@string/menu_toggle_percentage_mode" android:checkable="true" app:showAsAction="never" />
    <item android:id="@id/menu_toggle_average_lines" android:title="@string/menu_toggle_average_lines" android:checkable="true" app:showAsAction="never" />
    <item android:id="@id/menu_group_other_slice" android:checked="true" android:title="@string/menu_group_smaller_slices" android:checkable="true" app:showAsAction="never" />
</menu>