<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:padding="@dimen/widget_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/widget_layout" android:background="@drawable/appwidget_dark_bg_clickable" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@android:color/white" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/account_name" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/edge_padding" android:text="@string/label_account_name" android:singleLine="true" android:layout_weight="1.0" />
        <TextView android:id="@id/transactions_summary" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/widget_margin" android:layout_marginRight="@dimen/widget_margin" android:singleLine="true" style="@style/ListItemText" />
        <ImageButton android:id="@id/btn_new_transaction" android:background="@drawable/appwidget_bg_clickable" android:layout_width="48.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/edge_padding" android:layout_marginRight="@dimen/edge_padding" android:src="@drawable/content_new_holo_light" android:contentDescription="@string/description_add_transaction_icon" />
        <ImageButton android:id="@id/btn_view_account" android:background="@drawable/appwidget_bg_clickable" android:layout_width="48.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/edge_padding" android:layout_marginRight="@dimen/edge_padding" android:src="@drawable/action_about_holo_light" android:contentDescription="@string/description_view_account_icon" />
    </LinearLayout>
</FrameLayout>